Adapt tests for fillers and fix some checkstyle